--- a/projects/mapservice/index.html
+++ b/projects/mapservice/index.html
@@ -19,10 +19,10 @@
 					<br>
 					<textarea type="text" id="textPoint"></textarea>
 					<br><br>
-					<input id="coordPointX" type="text" style="display:none;" readonly>
-					<input id="coordPointY" type="text" style="display:none;" readonly">
-					<input id="positionBlockPointX" type="text" style="display:none;" readonly>
-					<input id="positionBlockPointY" type="text" style="display:none;" readonly>
+					<input id="coordPointX" type="text" class="disavle" readonly>
+					<input id="coordPointY" type="text" class="disavle" readonly>
+					<input id="positionBlockPointX" type="text" class="disavle" readonly>
+					<input id="positionBlockPointY" type="text" class="disavle" readonly>
 					<label for="colorPoint">Цвет:</label><br>
 					<input type="color" list="colorList" id="colorPoint" value="#FFFB00">
 					<datalist id="colorList">
@@ -47,6 +47,6 @@
 		</div>
 	</div>
 	<script src="https://code.jquery.com/jquery-3.5.0.js" type="text/javascript"></script>
-	<script src="scripts/js-scripts/script.js" type="text/javascript"></script>
+	<script src="js/script.js" type="text/javascript"></script>
 </body>
 </html>
