--- a/projects/mapservice/index.html
+++ b/projects/mapservice/index.html
@@ -61,6 +61,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/script.js" type="text/javascript"></script>
+	<script src="js/test.js"></script>
+	<script src="js/script.js"></script>
 </body>
 </html>
