--- a/projects/mapservice/index.html
+++ b/projects/mapservice/index.html
@@ -13,8 +13,8 @@
 		</nav>
 		<button class="info__control--button">Управление <span class="control__icon">v</span></button>
 		<ul class="info__control disable">
-			<li class="info__control__item">Нажатие правой кнопки мыши на карту - создание точки</li>
-			<li class="info__control__item">Нажатие лувой кнопки мыши на точку - открытие информации о ней</li>
+			<li class="info__control__item">Нажатие <strong>правой</strong> кнопки мыши на карту - создание точки</li>
+			<li class="info__control__item">Нажатие <strong>левой</strong> кнопки мыши на точку - открытие информации о ней</li>
 			<!-- <li class="info__control__item">Двойное нажатие левой кнопки мыши на карте - увеличение изображения</li> -->
 		</ul>
 		
@@ -26,11 +26,11 @@
 					<div class="modal">
 						<label for="namePoint">Название:</label>
 						<br>
-						<textarea type="text" id="namePoint"></textarea>
+						<textarea type="text" id="namePoint" placeholder="Название точки"></textarea>
 						<br>
 						<label for="textPoint">Описание:</label>
 						<br>
-						<textarea type="text" id="textPoint"></textarea>
+						<textarea type="text" id="textPoint"  placeholder="Описание точки"></textarea>
 						<br><br>
 						<label for="colorPoint">Цвет:</label><br>
 						<input type="color" list="colorList" id="colorPoint" value="#FFFB00">
