--- a/index.html
+++ b/index.html
@@ -13,28 +13,36 @@
             <button class="button__global__menu">
                 <svg class="button__global__menu-icon" enable-background="new 0 0 512 512" height="512" viewBox="0 0 512 512" width="512" xmlns="http://www.w3.org/2000/svg"><path d="m464.883 64.267h-417.766c-25.98 0-47.117 21.136-47.117 47.149 0 25.98 21.137 47.117 47.117 47.117h417.766c25.98 0 47.117-21.137 47.117-47.117 0-26.013-21.137-47.149-47.117-47.149z"/><path d="m464.883 208.867h-417.766c-25.98 0-47.117 21.136-47.117 47.149 0 25.98 21.137 47.117 47.117 47.117h417.766c25.98 0 47.117-21.137 47.117-47.117 0-26.013-21.137-47.149-47.117-47.149z"/><path d="m464.883 353.467h-417.766c-25.98 0-47.117 21.137-47.117 47.149 0 25.98 21.137 47.117 47.117 47.117h417.766c25.98 0 47.117-21.137 47.117-47.117 0-26.012-21.137-47.149-47.117-47.149z"/></svg>
                 <span class="button__global__menu-title">Меню</span>
+                <ul class="global__menu disable">
+                    <li class="global__menu__item">
+                        <a href="index.html" class="global__menu__link">
+                            Главная
+                        </a>
+                    </li>
+                    <li class="global__menu__item list">
+                        <div class="global__menu__item-title">Мои проекты ></div>
+                        <ul class="global__submmenu disable">
+                            <li class="global__submmenu__item global__menu__item">
+                                <a href="projects/mapservice/index.html" class="global__menu__link">Картографический сервис</a>
+                            </li>
+                            <li class="global__submmenu__item global__menu__item">
+                                <a href="projects/constructor/index.html" class="global__menu__link">Конструктор товаров</a>
+                            </li>
+                            <li class="global__submmenu__item global__menu__item">
+                                <a href="projects/modularSlider/index.html" class="global__menu__link">Слайдер</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="global__menu__item list">
+                        <div class="global__menu__item-title">Мои инстументы ></div>
+                        <ul class="global__submmenu disable">
+                            <li class="global__submmenu__item global__menu__item">
+                                <a href="tools/textFormatting/index.html" class="global__menu__link">Форматирование текста</a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
             </button>
-            <ul class="global__menu disable">
-                <li class="global__menu__item">
-                    <a href="index.html" class="global__menu__link">
-                        Главная
-                    </a>
-                </li>
-                <li class="global__menu__item">
-                    <div class="global__menu__item-title">Мои проекты ></div>
-                    <ul class="global__submmenu">
-                        <li class="global__submmenu__item global__menu__item">
-                            <a href="projects/mapservice/index.html" class="global__menu__link">Картографический сервис</a>
-                        </li>
-                        <li class="global__submmenu__item global__menu__item">
-                            <a href="projects/constructor/index.html" class="global__menu__link">Конструктор товаров</a>
-                        </li>
-                        <li class="global__submmenu__item global__menu__item">
-                            <a href="projects/modularSlider/index.html" class="global__menu__link">Слайдер</a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
         </nav>
         <h1 class="logo">Сайт Тихонова Никиты</h1>
     </header>
