slider upd 1.1.1, calc width and calc height slide list, enable all slider functions; map upd, change in coordinate computation, add menu

--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
                             </li>
                         </ul>
                     </li>
+                    <li class="global__menu__item list">
+                        <div class="global__menu__item-title">Прочее ></div>
+                        <ul class="global__submmenu disable">
+                            <li class="global__submmenu__item global__menu__item">
+                                <a href="other/googleFT/index.html" class="global__menu__link">Google Foms + Google Table</a>
+                            </li>
+                        </ul>
+                    </li>
                 </ul>
             </button>
         </nav>
