map upd, minor changes

--- a/projects/mapservice/index.html
+++ b/projects/mapservice/index.html
@@ -60,8 +60,14 @@
 			</div>
 			<div class="wrap" id="wrap">	
 				<div class="position__cursor">
-					<input class="position__cursor__item" type="text" id="mouseX">
-					<input class="position__cursor__item" type="text" id="mouseY">
+					<label class="position__cursor__item">
+						x:
+						<input class="input__coord" type="text" id="mouseX" readonly>
+					</label>
+					<label class="position__cursor__item">
+						y:
+						<input class="input__coord" type="text" id="mouseY" readonly>
+					</label>
 				</div>
 				<div class="wrap__container">
 					<div class='zoom disable'>
