fix map, fix add point on map

--- a/projects/mapservice/index.html
+++ b/projects/mapservice/index.html
@@ -73,7 +73,9 @@
 					<div class='zoom disable'>
 						<div class="dot"></div>
 					</div>
-					<img class="wrap__image" id="map2d" src="https://github.com/NekitSan/ASL_std./blob/master/asl-mapping.ru/www/imager/maps/min/oldmedievalminecraft2-min.jpg?raw=true" alt="map - 2d">
+					<div class="wrap__image__container">
+						<img class="wrap__image" id="map2d" src="https://github.com/NekitSan/ASL_std./blob/master/asl-mapping.ru/www/imager/maps/min/oldmedievalminecraft2-min.jpg?raw=true" alt="map - 2d">
+					</div>
 				</div>
 			</div>
 		</div>
